// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<TopBarHints>
  <div
    className="hint-container"
  />
</TopBarHints>
`;

exports[`should render correctly 2`] = `
<TopBarHints>
  <div
    className="hint-container"
  >
    <div>
      Press + / - key to increase / decrease sides.
    </div>
  </div>
</TopBarHints>
`;

exports[`should render correctly 3`] = `
<TopBarHints>
  <div
    className="hint-container"
  />
</TopBarHints>
`;
